filler text until end of Sec 5.2

--- a/BSL/SkMonCloExtBSL.bib
+++ b/BSL/SkMonCloExtBSL.bib
@@ -60,6 +60,18 @@
 	year = {2018}
 }
 
+@article{bourke:lack:braided:2020,
+	title = {Braided Skew Monoidal Categories},
+	volume = {35},
+	url = {http://www.tac.mta.ca/tac/volumes/35/2/35-02abs.html},
+	pages = {19--63},
+	number = {2},
+	XXXjournal = {Theor. Appl. Categ.},
+	journal = "Theory and Applications of Categories",
+	author = {John Bourke and Stephen Lack},
+	year = {2020}
+}
+
 @article{buckley:catalan:2015,
 	title = {The {C}atalan Simplicial Set},
 	volume = {158},
